--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World!
+<html>
+    <head>
+        <title>Survey</title>
+    </head>
+    <body>
+        <form action="index.php" name="my form" method="POST">
+            
+            First Name: <input type="text" name="firstname"><br>
+            Last Name: <input type="text" name="lastname">
+
+        </form>
+    </body>
+</html>
