--- a/lab2/index.html
+++ b/lab2/index.html
@@ -7,6 +7,10 @@
 
 <body>
 
+<div class="title">
+  <h1>Dish's Amazing Grocery Store</h1>
+</div>
+
 <!-- Tab links, each one with an onclick event associated with it -->
 <div class="tab">
   <button class="tablinks" onclick="openInfo(event, 'Client')">Client</button>
@@ -19,12 +23,13 @@
   <h3>Client Information</h3>
   <p>Tell us a bit about you.</p>
 	Choose a Category:
-	<select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct')">
+	<select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct', 'organicFood')">
 	<option value=""></option>
-	<option value="Vegetarian">Vegetarian</option>
-    <option value="GlutenFree">GlutenFree</option>
+	<option value="LactoseIntolerant">Lactose Intolerant</option>
+    <option value="NutAllergies">Nut Allergies</option>
     <option value="None">None</option>
 	</select>
+  <input type="checkbox" id="organicFood" value="organicFood" onchange="populateListProductChoices('dietSelect', 'displayProduct', 'organicFood')">Filter by organic products
 </div>
 
 <div id="Products" class="tabcontent">
@@ -41,6 +46,10 @@
   <h3>Cart</h3>
   <p>Here is your cart.</p>
   <div id="displayCart"></div>
+</div>
+
+<div class="footer">
+  <p>Site created by Dish</p>
 </div>
 
 <script src="scripts/groceries.js"></script>
