--- a/lab5/index.html
+++ b/lab5/index.html
@@ -39,16 +39,16 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about"><img src="https://img.icons8.com/material/30/cfe0c3/about--v1.png">About Us</a>
+                        <a class="nav-link" href="#about"><img id="logoAbout" src="https://img.icons8.com/material/30/cfe0c3/about--v1.png">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services"><img src="https://img.icons8.com/ios-filled/30/cfe0c3/veterinarian.png"/>Services</a>
+                        <a class="nav-link" href="#services"><img id="logoService" src="https://img.icons8.com/ios-filled/30/cfe0c3/veterinarian.png"/>Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#vets"><img src="https://img.icons8.com/ios-filled/30/cfe0c3/veterinarian-male.png"/>Meet the Vets</a>
+                        <a class="nav-link" href="#vets"><img id="logoVet" src="https://img.icons8.com/ios-filled/30/cfe0c3/veterinarian-male.png"/>Meet the Vets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#bookApt"><img src="https://img.icons8.com/ios-filled/30/cfe0c3/health-calendar.png"/>Book An Appointment</a>
+                        <a class="nav-link" href="#bookApt"><img id="logoAptmnt" src="https://img.icons8.com/ios-filled/30/cfe0c3/health-calendar.png"/>Book An Appointment</a>
                     </li>
                 </ul>
             </div>
@@ -57,7 +57,7 @@
         
     </nav>
 
-    <h1 id="about"> About us</h1>
+    <h1 id="about"><img src="https://img.icons8.com/material/50/cfe0c3/about--v1.png"> About us</h1>
     <div class="p-3 my-3" id="box">
         <p class="fw-bold my-2" style="font-size: 25px">75 Laurier Ave. E, Ottawa, ON K1N 6N5</p>
         <p class="px-3 my-1" style="font-size: 20px; padding-left: 1.5rem;">Mon-Fri 8:30 AM - 6:00 PM</p>
@@ -69,7 +69,7 @@
     https://getbootstrap.com/docs/5.0/content/tables/
     -->
 
-    <h1 id="services">Services</h1>
+    <h1 id="services"><img src="https://img.icons8.com/ios-filled/30/cfe0c3/veterinarian.png">Services</h1>
 
     <div class="accordion" id="accordionFlushExample">
         <div class="accordion-item">
@@ -150,7 +150,7 @@
     </div>
 
     <br>
-    <h1 id="vets">Meet the Vets!</h1><br>
+    <h1 id="vets"><img src="https://img.icons8.com/ios-filled/30/cfe0c3/veterinarian-male.png">Meet the Vets!</h1><br>
     <div class="row justify-content-around">
         <div class="card" id="box" style="width: 18rem;">
             <img src="images/doctor.jpg" class="card-img-top mt-3" alt="...">
@@ -176,7 +176,7 @@
     </div>
 
     <br>
-    <h1 id="bookApt">Book an Appointment</h1>
+    <h1 id="bookApt"><img src="https://img.icons8.com/ios-filled/30/cfe0c3/health-calendar.png">Book an Appointment</h1>
 
     <form>
         <div class="mb-3">
