--- a/lab5/index.html
+++ b/lab5/index.html
@@ -69,7 +69,7 @@
     https://getbootstrap.com/docs/5.0/content/tables/
     -->
 
-    <h1 id="services"><img src="https://img.icons8.com/ios-filled/60/cfe0c3/veterinarian.png">Services</h1>
+    <h1 id="services"><img src="https://img.icons8.com/ios-filled/60/cfe0c3/veterinarian.png"> Services</h1>
 
     <div class="accordion" id="accordionFlushExample">
         <div class="accordion-item">
@@ -150,7 +150,7 @@
     </div>
 
     <br>
-    <h1 id="vets"><img src="https://img.icons8.com/ios-filled/60/cfe0c3/veterinarian-male.png">Meet the Vets!</h1><br>
+    <h1 id="vets"><img src="https://img.icons8.com/ios-filled/60/cfe0c3/veterinarian-male.png"> Meet the Vets!</h1><br>
     <div class="row justify-content-around">
         <div class="card" id="box" style="width: 18rem;">
             <img src="images/doctor.jpg" class="card-img-top mt-3" alt="...">
@@ -176,7 +176,7 @@
     </div>
 
     <br>
-    <h1 id="bookApt"><img src="https://img.icons8.com/ios-filled/60/cfe0c3/health-calendar.png">Book an Appointment</h1>
+    <h1 id="bookApt"><img src="https://img.icons8.com/ios-filled/60/cfe0c3/health-calendar.png"> Book an Appointment</h1>
 
     <form>
         <div class="mb-3">
@@ -216,7 +216,7 @@
     <div class="collapse" id="checkout">
 
         <br>
-        <h1>Checkout</h1>
+        <h1><img src="https://img.icons8.com/ios-glyphs/60/cfe0c3/shopping-cart--v1.png"/> Checkout</h1>
         <br>
 
         <form>
