actual ACTUAL last one

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -211,7 +211,7 @@
         </div>
     </form>
 
-    <button type="button" class="btn btn-primary collapsed" aria-expanded="false" aria-controls="checkoutCollapse" data-bs-toggle="collapse" data-bs-target="#checkout">Continue to Checkout</button>
+    <button type="button" id="gotoCheckout" class="btn btn-primary collapsed" aria-expanded="false" aria-controls="checkoutCollapse" data-bs-toggle="collapse" data-bs-target="#checkout">Continue to Checkout</button>
 
     <div class="collapse" id="checkout">
 
